arreglo homework htlm

--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -11,7 +11,7 @@
         </div>
         <div class = "divClass">
             <span id = "spanId">Mi comida favoria son las hamburguesas</span>
-            <a> href = "https://www.mcdonalds.com.ar/"</a>
+            <a href = "https://www.mcdonalds.com.ar/"></a>
         </div>
         <div  id = "thirdDiv" >
             <ul>
