correccion errores homework html

--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -1,22 +1,22 @@
 <html>
     <head>
         <title>Tarea HTML de Camilo Salcedo</title>
-        <link rel="stylesheets" href="style.css"/>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <div class = "divClass"> 
-            <h1 style="color:blue"> Camilo Salcedo</h1>
+            <h1> Camilo Salcedo</h1>
             <h3> Henry</h3>
             <h4> tarea de HTML / CSS </h4>
         </div>
         <div class = "divClass">
             <span id = "spanId">Mi comida favoria son las hamburguesas</span>
-            <a href = "https://www.mcdonalds.com.ar/"></a>
+            <a href = "https://www.mcdonalds.com.ar/">Restaurante favorito</a>
         </div>
         <div  id = "thirdDiv" >
             <ul>
                 <li>
-                    <img width="400px" src="https://assets.iprofesional.com/cdn-cgi/image/w=640/https://assets.iprofesional.com/assets/jpg/2022/05/536268.jpg"/>
+                    <img src="https://assets.iprofesional.com/cdn-cgi/image/w=640/https://assets.iprofesional.com/assets/jpg/2022/05/536268.jpg"/>
                 </li>
                 <li>
                     <img src="https://cache-backend-mcd.mcdonaldscupones.com/media/image/product$kQXnpmyG/200/200/original?country=ar"/>
